lib/ruff/src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G202.py.snap
---
source: src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- kind:
    LoggingRedundantExcInfo: ~
  location:
    row: 8
    column: 37
  end_location:
    row: 8
    column: 50
  fix: ~
  parent: ~
- kind:
    LoggingRedundantExcInfo: ~
  location:
    row: 13
    column: 37
  end_location:
    row: 13
    column: 60
  fix: ~
  parent: ~

